...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentFirstNameEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="textPersonName"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentLastNameEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="textPersonName"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentCompanyNameEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:text="@{viewModel.customer.companyName}" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentSiretEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:text="@{viewModel.customer.siret}" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentEmailEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="textEmailAddress"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentPhoneEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="phone|number"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentMobilePhoneEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="phone|number"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentAddressEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="textPostalAddress"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentPostCodeEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="number"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentCityEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:text="@{viewModel.customer.city}" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditCustomerFragmentNotesEditText"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="textMultiLine"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEditCustomerFragFab"
            style="@style/EasyVGPTheme.fabStyle"
            android:src="@drawable/ic_save_24dp"
...
