...
    <string name="frag_add_edit_customer_mobile_phone_hint">mobile phone</string>
    <string name="frag_add_edit_customer_address_hint">address</string>
    <string name="frag_add_edit_customer_post_code_hint">post code</string>
    <string name="frag_add_edit_customer_notes_hint">notes about your customer, that don\'t go into upside categories</string>

    <string name="frag_add_edit_customer_error_input_snack_bar_msg">You must enter all required fields</string>
    <string name="frag_add_edit_customer_error_input">Required field</string>

    <!-- Customer ViewModel -->
    <string name="view_model_customer_get_by_id">An error occurred when we have tried to load this machine</string>
    <string name="view_model_customer_insert_error">An error occurred when we have tried to save this machine</string>
    <string name="view_model_customer_update_error">An error occurred when we have tried to update this machine</string>

...
